--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="based one Blueberry">
-	<title>Blueberry </title>
+	<meta name="description" content="Kartoffel">
+	<title>Kartoffel </title>
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
 </head>
@@ -12,7 +12,7 @@
 	<main>
 		<section>
 		<img id="img" src="./assets/img/gif.gif" width="400px">
-		<img id="img" src="./assets/img/german.png" width="400px">
+		<img id="img" src="./assets/img/german.png" width="300px">
 		<span></span>
 		<a href="https://twitter.com/KARTOFFEL_ONE">Twitter</a>
 		<a href="https://t.me/Kartoffeltg">Telegram</a>
